--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: minifier
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Minify JS, CSS and HTML Files
 Version: 0.1.0
-Authors@R: person("Ashley", "Baldry", email = "arbaldry91@gmail.com", role = c("cre", "aut"))
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Authors@R: c(
+    person("Ashley", "Baldry", email = "arbaldry91@gmail.com", role = c("cre", "aut")),
+    person("Toptal", comment = "Owner of the Minifier API", role = "aut")
+    )
+Description: Using the 'Toptal' API to minify JavaScript, CSS and HTML files.
 License: MIT + file LICENSE
-Imports: httr
+Imports: R.utils, httr
+Suggests: testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
