--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
 Description: Using the 'Toptal' API to minify JavaScript, CSS and HTML files.
 License: MIT + file LICENSE
 Imports: R.utils, httr
-Suggests: testthat (>= 3.0.0)
+Suggests: rstudioapi, testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
